fixes columns-content-vertically-centered spacing issue

--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -127,6 +127,10 @@ h5 + .wp-block-columns:not(.columns-content-vertically-centered) {
 	}
 }
 
+.wp-block-columns + .wp-block-columns.columns-content-vertically-centered {
+	margin-top: 0;
+}
+
 .wp-block-mkl-section-block.alignfull {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
